--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -651,11 +651,8 @@ Since both scatterplots are interactively connected in real-time, the biochemist
 	\subfigure[]{\label{fig:case_c}\includegraphics[width=0.95\linewidth]{img/case_c.pdf}}
 	\subfigure[]{\label{fig:case_d}\includegraphics[width=0.95\linewidth]{img/case_d.pdf}}
 	\subfigure[]{\label{fig:case_e}\includegraphics[width=0.95\linewidth]{img/case_e.pdf}}
-  
-  
-  
   \caption{
-  {\color{red} TODO}
+  {\color{red} TODO - fix}
   \subref{fig:case_a},\subref{fig:case_e}~Distance from the active site over time. 
   \subref{fig:case_b}~Hydrophobicity profile of the trajectory over time.
   \subref{fig:case_c},\subref{fig:case_d}~Hydrophobicity profile of the trajectory with respect to the distance.
@@ -675,7 +672,7 @@ For this reason they utilized the bar chart view containing the amino acid graph
 \begin{figure}[htb]
 	\centering
   \includegraphics[width=0.95\linewidth]{img/case_hydro_vs_dist_bar.png}
-  \caption{\label{fig:case_hydro_vs_dist_bar} {\color{red}TODO}}
+  \caption{\label{fig:case_hydro_vs_dist_bar} {\color{red}TODO - fix} Bar chart view showing the time steps when the ligand is in the vicinity of the hydrophilic amino acids.}
 \end{figure}
 
 
@@ -690,7 +687,7 @@ This was also confirmed by the bar chart representation in Figure~\ref{fig:case_
 \begin{figure}[htb]
 	\centering
   \includegraphics[width=0.95\linewidth]{img/case_hydro_vs_dist_3d.png}
-  \caption{\label{fig:case_hydro_vs_dist_3d} {\color{red}TODO}}
+  \caption{\label{fig:case_hydro_vs_dist_3d} {\color{red}TODO - fix} 3D view showing the selected hydrophilic amino acids and their spatial position to the ligand trajectory.}
 \end{figure} 
 
 
@@ -704,7 +701,7 @@ This was also confirmed by the bar chart representation in Figure~\ref{fig:case_
 %{\color{red}Note that the biochemists can also estimate that the provided data were probably computed using Steered molecular dynamics (SMD) \todo{popsat co je SMD in RW?} simulation since the simulation starts with ligand in the active site (signalized by red color.)}
 
 
-\section*{Conclusions - All}
+\section*{Conclusions}
 \input{parts/conclusion.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
