--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -688,7 +688,7 @@ This was also confirmed by the bar chart representation in Figure~\ref{fig:case_
 
 \begin{figure}[htb]
 	\centering
-  \includegraphics[width=0.95\linewidth]{img/case_hydro_vs_dist_3d.png}
+  \includegraphics[width=0.95\linewidth]{img/case_hydro_vs_dist_3d.jpg}
   \caption{\label{fig:case_hydro_vs_dist_3d} {\color{red}TODO - fix} 3D view showing the selected hydrophilic amino acids and their spatial position to the ligand trajectory.}
 \end{figure} 
 
