--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -297,8 +297,8 @@ For example, a significant portion of the simulation the ligand usually spends o
 It also often happens that the ligand enters the molecule via a wrong tunnel and is then evicted from the molecule and searches for the entrance repeatedly.
 Therefore, the "true" active site entering can be in fact captured in a smaller subset of the original sequence.
 
-In this paper, we propose a new visual analysis system that addresses the aforementioned challenges, i.e., the transportation of a ligand to the active site. 
-We aim to provide the domain experts with a tool for intuitive and interactive exploration of already captured molecular dynamics simulation containing the process of ligand binding. 
+In this paper we propose a new visual analysis system that addresses the aforementioned challenges, i.e., the transportation of a ligand to the active site. 
+We aim to provide the domain experts with a tool for intuitive and interactive exploration of already captured molecular dynamics (MD) simulation containing the process of ligand binding. 
 Using our proposed solution the users are able to distinguish between the parts of the simulation where the ligand searches for the proper path to the active site (searches the tunnel gorge or enters the wrong tunnel) and the part where the ligand finally leads to and reaches the active site.
 Furthermore, our solution introduces a method for simplification of the original scattered ligand trajectory.
 We suggest the automatic simplification of the trajectory which can be further manually adjusted, i.e., selected parts of the trajectory can be further simplified.
@@ -347,7 +347,7 @@ Their final visualization is achieved by means of placing light sources on the e
 Parulek et al.~\cite{parulek2012} exploit scatterplots to communicate the evolution of protein voids. 
 In their later study~\cite{parulek2013} they also suggest to utilize amino acids physico-chemical properties related to cavities to help users to navigate through their occurrences. 
 The visualization is then achieved in the focus and context manner.
-Lindow et al. \cite{Lindow2013} present an approach for visualization of temporal evolution of cavities in a temporal graph, which, to a certain extent, resembles our temporal tunnel model. 
+Lindow et al. \cite{Lindow2013} present an approach for visualization of temporal evolution of cavities in a temporal graph. 
 In this work they focus on the interactive exploration of the dynamics of protein cavities that can form the transportation path for a ligand. 
 They calculate and visualize the cavity volume and analyze the time-dependent changes of the cavity structure.
 The cavity dynamics is captured by rendering the cavities in a single image. 
