add ligand paths

--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -707,6 +707,15 @@ This was also confirmed by the bar chart representation in Figure~\ref{fig:case_
 In the second case study we demonstrate the usefulness of our approach when studying more complex cases.
 For this purpose we are going to use a simulation of Haloalkane dehalogenase together with three 1,2,3-Trichloropropane (TCP) ligands (referred in following text as TCP--294, TCP--295, and TCP--296 based on their IDs in simulation).
 
+\begin{figure}[htb]
+	\centering
+	\includegraphics[width=0.95\linewidth]{img/tcp3_paths.png}
+  \caption{
+  \label{fig:tcp3_paths}
+  TODO
+  }
+\end{figure}  
+
 The hypothesis stated by biochemists at the beginning was that all three ligands should bind to the same pocket surrounded by following amino acids {\color{red}TODO add IDs}.
 \todo{Another possible goal can be evaluation how many ligands can fit the given pocket - \ie evaluate reactiveness of given protein?}
 Hence, attributes such as \textit{distance} or \textit{direction} were computed in relation to the active site defined by these amino acids. 
@@ -723,7 +732,7 @@ Finally, the overview of trajectory of TCP--295 suggests that the ligand was scr
 	\includegraphics[width=0.95\linewidth]{img/tcp3_overview.pdf}
   \caption{
   \label{fig:tcp3_overview}
-  \subref{fig:tcp3_overview_294}~TODO - caption
+  TODO - caption
   }
 \end{figure}   
 
