--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -705,6 +705,9 @@ This was also confirmed by the bar chart representation in Figure~\ref{fig:case_
 \section*{Conclusions}
 \input{parts/conclusion.tex}
 
+\section*{Acknowledgements}
+This work was supported through the mobility project NF-CZ07-MOP-2-1162014 supported by Norway grants and through the PhysioIllustration research project 218023 funded by the Norwegian Research Council.
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%                                          %%
 %% Backmatter begins here                   %%
